2010-04-23  Stefan Monnier  <monnier@iro.umontreal.ca>

	* mm-util.el (mm-find-buffer-file-coding-system):
	* yenc.el (yenc-decode-region): Don't let-bind a read-only variable.

2010-04-22  Andreas Seltenreich  <seltenreich@gmx.de>

	* message.el (message-generate-headers): Record insertion of optional
	headers as well.  Otherwise the check to prevent repeated insertion of
	optional headers is a no-op.

2010-04-17  Teodor Zlatanov  <tzz@lifelogs.com>

	* smime.el: Don't mention CVS.

	* nnrss.el (nnrss-fetch): Don't mention CVS.

	* nnir.el: Don't mention CVS.

2010-04-14  Stefan Monnier  <monnier@iro.umontreal.ca>

	* gnus-sum.el (gnus-summary-bookmark-make-record):
	Add `location' field.

2010-04-12  Stefan Monnier  <monnier@iro.umontreal.ca>

	* gnus-sum.el: Add bookmark declarations to silence the compiler.
	(gnus-mark-xrefs-as-read, gnus-summary-limit-to-bodies):
	Use with-current-buffer to silence the byte-compiler.
	(gnus-summary-bookmark-make-record): Use derived-mode-p and don't
	bother to require `gnus'.
	(gnus-summary-bookmark-jump): Don't forget to autoload.  Simplify.

2010-04-12  Thierry Volpiatto  <thierry.volpiatto@gmail.com>

	* gnus-sum.el (gnus-summary-bookmark-make-record)
	(gnus-summary-bookmark-jump): New functions.
	(gnus-summary-mode): Setup bookmark support.

2010-04-01  Andreas Schwab  <schwab@linux-m68k.org>

	* mm-uu.el (mm-uu-pgp-signed-extract-1): Use buffer-file-coding-system
	if set.

2010-03-31  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (gnus-article-browse-html-save-cid-content): Rename from
	gnus-article-browse-html-save-cid-image; make it work recursively for
	forwarded messages as well.
	(gnus-article-browse-html-parts): Work when prefix arg is given.
	(gnus-article-browse-html-article): Doc fix.

2010-03-30  Chong Yidong  <cyd@stupidchicken.com>

	* message.el (message-default-mail-headers):
	(message-default-headers): Carry the value mail-default-headers over